Removed <hr> from drop down menu as they couldn't be seen

--- a/module3-sol/index.html
+++ b/module3-sol/index.html
@@ -26,11 +26,9 @@
                         <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
                     </svg>
                     <ul class="dropdown-menu w-100 m-0 bg-black" aria-labelledby="menu-dropdown">
-                        <li class="dropdown-item"><a href="#chicken">Chicken</a></li>
-                        <li class=""><hr></li>
-                        <li class="dropdown-item"><a href="#beef">Beef</a></li>
-                        <li class=""><hr></li>
-                        <li class="dropdown-item"><a href="#sushi">Sushi</a></li>
+                        <li class="dropdown-item p-3"><a href="#chicken">Chicken</a></li>
+                        <li class="dropdown-item p-3"><a href="#beef">Beef</a></li>
+                        <li class="dropdown-item p-3"><a href="#sushi">Sushi</a></li>
                     </ul>
                 </div>
             </div>
